test/error/JAppl10.t
%typeterm type1 {
  implement { String }
  get_fun_sym(t) { t }
  cmp_fun_sym(s1,s2) { s1.equals(s2) }
  get_subterm(t,n) { null }
  equals(t1,t2) { t1.equals(t2) }
}

%typeterm type2 {
  implement { String }
  get_fun_sym(t) { t }
  cmp_fun_sym(s1,s2) { s1.equals(s2) }
  get_subterm(t,n) { null }
  equals(t1,t2) { t1.equals(t2) }
}

%op type1 conc( type2, type2 ) {
  fsym { factory.makeAFun("conc", 1, false) }
  make(t1,t2)  { factory.makeList() }
}

%match(type1 t) {
  conc(X*,_) -> {}
}
